--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Profile card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.google.com/specimen/Kumbh+Sans:wght@400;700"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | Profile card component</title>
+  </head>
+  <body>
+    <div class="card-wrapper">
+      <img class="card-image" src="images/bg-pattern-card.svg" alt="" />
+      <img class="card-icon" src="images/image-victor.jpg" alt="" />
+      <div class="card-text">
+        <div class="text-name">
+          <div class="name">Victor Crest <span>26</span></div>
+          <div class="city">London</div>
+        </div>
+        <div class="social">
+          <div class="social-item">
+            <div class="social-numbers">80k</div>
+            <div class="social-text">Followers</div>
+          </div>
+          <div class="social-item">
+            <div class="social-numbers">803k</div>
+            <div class="social-text">Likes</div>
+          </div>
+          <div class="social-item">
+            <div class="social-numbers">1.4k</div>
+            <div class="social-text">Photos</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="base">
+      Victor Crest 26 London 80K Followers 803K Likes 1.4K Photos
+    </div> -->
+  </body>
 </html>
